# GRPCPingPong

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  actionbuttondelegate.cpp  actionbuttondelegate.h  broadcastlistener.cpp  broadcastlistener.h  connectingtablemodel.cpp  connectingtablemodel.h  main.cpp  pingclient.cpp  pingclient.h
Client/proto/: pingservice.proto
Server/: CMakeLists.txt  grpcserver.cpp  grpcserver.h  mainwindow.cpp  mainwindow.h
Server/proto/: pingservice.proto
